# fast_tut

./: main.py  pyproject.toml
api/: database.py  main.py  models.py  schemas.py  utils.py
api/routers/: post.py  user.py
src/api/: config.py  database.py  models.py  oauth2.py  schemas.py  utils.py
src/api/routers/: auth.py  ping.py  post.py  user.py  vote.py
src/tests/: test_api.py
