[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Ryan Jones <ryan.jones26@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi  = "^0.74.1"
uvicorn = "^0.17.5"
sqlalchemy="1.47.27"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
